--- a/index.html
+++ b/index.html
@@ -357,7 +357,7 @@ body {
     text-align: center;
     position: relative;
     background: linear-gradient(180deg, rgba(0, 0, 0, 0.788) 0%, rgba(0,0,0,0.3) 100%), 
-                url('cover.png') no-repeat center center;
+                url('COVER.webp') no-repeat center center;
     background-size: cover;
     color: white; /* pour que le texte ressorte sur l'image */
 }
