--- a/index.html
+++ b/index.html
@@ -2092,7 +2092,7 @@ body {
                 <!-- Œuvre 7 -->
         <div class="artwork fade-in">
             <div class="artwork-image">
-                <img src="Capture d'écran 2025-09-14 195923.png" alt="Éclat de Joie">
+                <img src="COVER.webp" alt="Éclat de Joie">
             </div>
             <div class="artwork-content">
                 <h3 class="artwork-title">Éclat de Joie</h3>
@@ -2103,7 +2103,7 @@ body {
                 <!-- Œuvre 8 -->
         <div class="artwork fade-in">
             <div class="artwork-image">
-                <img src="cover.png" alt="Éclat de Joie">
+                <img src="Capture d'écran 2025-09-14 200014.png" alt="Éclat de Joie">
             </div>
             <div class="artwork-content">
                 <h3 class="artwork-title">Éclat de Joie</h3>
