--- a/index.html
+++ b/index.html
@@ -2100,17 +2100,16 @@ body {
             </div>
         </div>
 
-                <!-- Œuvre 8 -->
+        <!-- Œuvre 8 -->
         <div class="artwork fade-in">
             <div class="artwork-image">
-                <img src="Capture d'écran 2025-09-14 200014.png" alt="Éclat de Joie">
+                <img src="Capture d'écran 2025-09-14 195937.png" alt="Métamorphose">
             </div>
             <div class="artwork-content">
-                <h3 class="artwork-title">Éclat de Joie</h3>
-                <p class="artwork-description">Une célébration délicate de la vie à travers des nuances lumineuses.</p>
+                <h3 class="artwork-title">Métamorphose</h3>
+                <p class="artwork-description">L'art de la transformation exprimé avec élégance et subtilité.</p>
             </div>
         </div>
-
 
     </div>
 
