--- a/index.html
+++ b/index.html
@@ -2089,16 +2089,17 @@ body {
             </div>
         </div>
 
-                <!-- Œuvre 7 -->
+        <!-- Œuvre 7 -->
         <div class="artwork fade-in">
             <div class="artwork-image">
-                <img src="COVER.webp" alt="Éclat de Joie">
+                <img src="Capture d'écran 2025-09-14 195923.png" alt="Horizon Infini">
             </div>
             <div class="artwork-content">
-                <h3 class="artwork-title">Éclat de Joie</h3>
-                <p class="artwork-description">Une célébration délicate de la vie à travers des nuances lumineuses.</p>
+                <h3 class="artwork-title">Horizon Infini</h3>
+                <p class="artwork-description">Un voyage pictural vers la sérénité, où les horizons se dessinent en douceur.</p>
             </div>
         </div>
+
 
         <!-- Œuvre 8 -->
         <div class="artwork fade-in">
