--- a/index.html
+++ b/index.html
@@ -2070,13 +2070,14 @@ body {
         <!-- Œuvre 5 -->
         <div class="artwork fade-in">
             <div class="artwork-image">
-                <img src="Capture d'écran 2025-09-14 200229.png" alt="Éclat de Joie">
+                <img src="Capture d'écran 2025-09-14 200229.png" alt="Reflets d'Âme">
             </div>
             <div class="artwork-content">
-                <h3 class="artwork-title">Éclat de Joie</h3>
-                <p class="artwork-description">Une célébration délicate de la vie à travers des nuances lumineuses.</p>
+                <h3 class="artwork-title">Reflets d'Âme</h3>
+                <p class="artwork-description">Cette toile capture l'essence de l'introspection dans une approche minimaliste et poétique.</p>
             </div>
         </div>
+
 
         <!-- Œuvre 6 -->
         <div class="artwork fade-in">
