--- a/index.html
+++ b/index.html
@@ -2941,6 +2941,36 @@ function closeFullView() {
 </script>
 
 
+<script>
+    const modal = document.querySelector('.full-view-modal');
+const openButtons = document.querySelectorAll('.open-modal'); // tes boutons "Voir plus"
+const closeModal = modal.querySelector('.close-modal'); // bouton pour fermer
+
+// Ouvrir le modal
+openButtons.forEach(btn => {
+    btn.addEventListener('click', () => {
+        modal.style.display = 'flex';
+        document.body.style.overflow = 'hidden'; // bloque le scroll du site
+    });
+});
+
+// Fermer le modal
+closeModal.addEventListener('click', () => {
+    modal.style.display = 'none';
+    document.body.style.overflow = ''; // réactive le scroll
+});
+
+// Fermer si clic en dehors du contenu
+modal.addEventListener('click', (e) => {
+    if (e.target === modal) {
+        modal.style.display = 'none';
+        document.body.style.overflow = '';
+    }
+});
+
+</script>
+    
+
 
 <script>
 // Sélectionne tous les spans
